# tracing-experimentation

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
demo/: Cargo.toml
demo/src/: cats.rs  main.rs  run.rs  tracing.rs
layer/: Cargo.toml
layer/src/: compat_layer.rs  compat_span_ext.rs  fmt.rs
layer/src/fmt/: json.rs
layer/tests/: e2e.rs
src/: compat_layer.rs  compat_span_ext.rs  fmt.rs  json.rs  lib.rs
tests/: e2e.rs
